<resources>
    <string name="API" translatable="false">AIzaSyA66KwUrjxcFG5u0exynlJ45CrbrNe3hEc</string>
    //AIzaSyDNI_ZWPqvdS6r6gPVO50I4TlYkfkZdXh8
    <string name="app_name">VKU Assistant</string>
    <string name="channel_description" translatable="false">tt</string>
    <string name="channel_name" translatable="false">lichhoc</string>
    <string name="dong">Close</string>
    <string name="xacnhan">Done</string>
    <string name="thoikhoabieu">Schedule</string>
    <string name="nhacnho">Reminding</string>
    <string name="bando">Maps</string>
    <string name="caidat">Settings</string>
    <string name="lichhoc">Schedule</string>
    <string name="themlichhoc">Create a schedule</string>
    <string name="diadiem">Location</string>
    <string name="thoigian">Time</string>
    <string name="thu2">Monday</string>
    <string name="thu3">Tuesday</string>
    <string name="thu4">Wednesday</string>
    <string name="thu5">Thursday</string>
    <string name="thu6">Friday</string>
    <string name="thu7">Saturday</string>
    <string name="chuNhat">Sunday</string>
    <string name="huy">Cancel</string>
    <string name="them">Add</string>
    <string name="themthanhcong">Add successfully</string>
    <string name="suathoikhoabieu">Edit Schedule</string>
    <string name="thongbao">Notification</string>
    <string name="baotruoc">Remind before</string>
    <string name="baolaisau">Replay after</string>
    <string name="phuongtien">Vehicle</string>
    <string name="dibo">Walking</string>
    <string name="daluu">Saved</string>
    <string name="themdiadiem">Add new location</string>
    <string name="tendiadiem">Name</string>
    <string name="mota">Discription</string>
    <string name="toado">Coordinates</string>
    <string name="diadiemcuaban">Your Location</string>
    <string name="lichhochomnay">Today\'s Class Schedule</string>
    <string name="hoanthanh">Finish</string>
    <string name="chiduong">Direction</string>
    <string name="phut">" minutes."</string>
    <string name="batdausau">" class start in "</string>
    <string name="khoangcach">" Distance "</string>
    <string name="xedap">Bicycle</string>
    <string name="xemay">Motorcycle</string>
    <string name="oto">Car</string>
    <string name="phong">Class Room</string>
    <string name="giobatdau">Start time</string>
    <string name="suanhacnho">Edit Reminder</string>
    <string name="laplai">Repeat</string>
    <string name="chonthoigian">Choose time</string>
    <string name="chitiet">Detail</string>
    <string name="tenmonhoc">Name</string>
    <string name="luu">Save</string>
    <string name="tieude">Title</string>
    <string name="chonthu">Select day:</string>
    <string name="giay">" seconds"</string>
    <string name="themnhacnho">Add Notification</string>
    <string name="danhsachnhacnho">Reminding list</string>
    <string name="hangtuan">Weekly</string>
    <string name="hangthang">Monthly</string>
    <string name="chunhathangtuan">Every Sunday</string>
    <string name="thu2hangtuan">Every Monday</string>
    <string name="thu3hangtuan">Every Tuesday</string>
    <string name="thu4hangtuan">Every Wednesday</string>
    <string name="thu5hangtuan">Every Thursday</string>
    <string name="thu6hangtuan">Every Friday</string>
    <string name="thu7hangtuan">Every Saturday</string>
    <string name="ngay">" "</string>
    <string name="ngayx1">st of every month</string>
    <string name="ngayx2">nd of every month</string>
    <string name="ngayx3">rd of every month</string>
    <string name="ngayk">th of every month</string>
    <string name="chedotoi">Dark mode</string>
    <string name="khonglaplai">No repeat</string>
    <string name="xoathanhcong">Delete successfully!</string>
    <string name="matketnoi">Lost connection</string>
    <string name="khoang">"About "</string>
    <string name="dangchay">is running</string>
</resources>