<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ThemNhacNhoActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nhacnho"
        android:textSize="14dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edtTieuDe"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittextselector"
        android:hint="@string/tieude"
        android:paddingLeft="20dp"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/edtChiTiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:background="@drawable/edittextselector"
        android:hint="@string/chitiet"
        android:paddingLeft="20dp"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/thoigian"
            android:layout_marginLeft="10dp"
            android:textSize="14dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laplai"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:id="@+id/tvThoigian"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/chonthoigian"
            android:layout_margin="20dp"
            android:textSize="20dp"
            />
        <Spinner
            android:id="@+id/laplai"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_margin="20dp"
            android:layout_height="40dp"
            android:dropDownWidth="wrap_content"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnThem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.btnGreen"
        android:background="@drawable/button"
        android:text="@string/them"
        />

</LinearLayout>