<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:minWidth="400dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/boder_edt"
        android:text="@string/suathoikhoabieu"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/editTextTen"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:hint="@string/tenmonhoc"
        android:background="@drawable/edittextselector"
        android:layout_margin="20dp"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/diadiem"
        android:textSize="18dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">
        <Spinner
            android:id="@+id/SPdiadiem"
            android:background="@drawable/edittextselector"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            />
        <EditText
            android:id="@+id/editTextPhong"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:background="@drawable/edittextselector"
            android:hint="@string/phong"
            android:inputType="textPersonName" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thoigian"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >
        <Spinner
            android:id="@+id/spinner2"
            android:background="@drawable/edittextselector"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_height="45dp" />

        <EditText
            android:id="@+id/editTextGiohoc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:editable="false"
            android:paddingLeft="20dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittextselector"
            android:hint="@string/giobatdau"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonhuy"
            android:theme="@style/Theme.btnRed"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huy"/>
        <Button
            android:id="@+id/buttonXacNhan"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/xacnhan" />
    </LinearLayout>



</LinearLayout>