<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".AddLocationActivity">
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diadiem"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/edtTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tendiadiem"/>
    <EditText
        android:id="@+id/edtMoTa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mota"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toado"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/edtLat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="Lat"
            />
        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtLng"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="Lng"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnThem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/them"
        style="@style/Theme.btnGreen"
        android:background="@drawable/button"
        android:layout_gravity="center"
        />
</LinearLayout>