<?xml version="1.1" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="#19FF00"
        android:text="@string/themlichhoc"
        />
    <EditText
        android:id="@+id/hocphan"
        android:background="@drawable/edittextselector"
        android:paddingLeft="20dp"
        android:hint="@string/tenmonhoc"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diadiem"
        android:layout_marginLeft="20dp"
        android:id="@+id/tv"
        android:textSize="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center">
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="40dp"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:gravity="center"-->
<!--            android:background="@drawable/edittextselector"-->
<!--            android:text="Chọn địa điểm"-->
<!--            android:textSize="18dp"-->
<!--            -->
<!--            />-->
        <Spinner
            android:id="@+id/diadiemSpinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:dropDownWidth="match_parent"
            />

        <EditText
            android:id="@+id/phong"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/edittextselector"
            android:hint="@string/phong"
            android:paddingLeft="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thoigian"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextselector"
            android:paddingLeft="5dp"
             />

        <EditText
            android:id="@+id/thoigian"
            android:background="@drawable/edittextselector"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:editable="false"
            android:hint="@string/giobatdau" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Học bù(Tự xóa sau khi học xong)"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnclose"
            android:theme="@style/Theme.btnRed"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/dong"/>
        <Button
            android:id="@+id/btn3"
            android:theme="@style/Theme.btnGreen"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/them"
            />

    </LinearLayout>

</LinearLayout>