<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chedotoi"
            android:textSize="20dp"/>
        <Space
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/thongbao"
            android:textSize="20dp" />
        <Space
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/onoff"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:checked="true"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/baotruoc"
            android:textSize="18dp"
            />
        <Spinner
            android:id="@+id/thoigian"
            android:layout_width="wrap_content"
            android:minWidth="100dp"

            android:dropDownWidth="150dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <Space
    android:layout_width="match_parent"
    android:layout_height="10dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/baolaisau"
            android:textSize="18dp"
            />
        <Spinner
            android:id="@+id/baoLai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:dropDownWidth="150dp"

            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/phuongtien"
            android:textSize="18dp"
            />
        <Spinner
            android:id="@+id/phuongtien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:dropDownWidth="150dp"

            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/luu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luu"
            android:background="@drawable/button"
            android:theme="@style/Theme.btnGreen"
            />
    </LinearLayout>
</LinearLayout>