<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imgSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgtkb"
        app:srcCompat="@drawable/sun"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgchim"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgtkb"
        app:srcCompat="@drawable/chim" />

    <ImageView
        android:id="@+id/imgbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitetop"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="374dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgtkb"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/layoutwhite"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iconTKB"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgtkb"
        app:layout_constraintStart_toStartOf="@+id/imgtkb"
        app:layout_constraintTop_toTopOf="@+id/imgtkb"
        app:srcCompat="@drawable/schedule"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgnhacnho"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgtkb"
        app:srcCompat="@drawable/layoutwhite"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iconNhacNho"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgnhacnho"
        app:layout_constraintEnd_toEndOf="@+id/imgnhacnho"
        app:layout_constraintTop_toTopOf="@+id/imgnhacnho"
        app:srcCompat="@drawable/note" />

    <ImageView
        android:id="@+id/imgmap"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgnhacnho"
        app:srcCompat="@drawable/layoutwhite" />

    <ImageView
        android:id="@+id/iconMap"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgmap"
        app:layout_constraintStart_toStartOf="@+id/imgmap"
        app:layout_constraintTop_toTopOf="@+id/imgmap"
        app:srcCompat="@drawable/mapicon" />

    <ImageView
        android:id="@+id/imgsetting"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgmap"
        app:srcCompat="@drawable/layoutwhite" />

    <ImageView
        android:id="@+id/iconSetting"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgsetting"
        app:layout_constraintEnd_toEndOf="@+id/imgsetting"
        app:layout_constraintTop_toTopOf="@+id/imgsetting"
        app:srcCompat="@drawable/settingicon" />

    <TextView
        android:id="@+id/tvTKB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:text="@string/thoikhoabieu"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgtkb"
        app:layout_constraintStart_toStartOf="@+id/imgtkb"
        app:layout_constraintTop_toTopOf="@+id/imgtkb" />

    <TextView
        android:id="@+id/tvNhacNho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/nhacnho"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgnhacnho"
        app:layout_constraintEnd_toEndOf="@+id/imgnhacnho"
        app:layout_constraintTop_toTopOf="@+id/imgnhacnho" />

    <TextView
        android:id="@+id/tvMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/bando"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgmap"
        app:layout_constraintStart_toStartOf="@+id/imgmap"
        app:layout_constraintTop_toTopOf="@+id/imgmap" />

    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/caidat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgsetting"
        app:layout_constraintEnd_toEndOf="@+id/imgsetting"
        app:layout_constraintTop_toTopOf="@+id/imgsetting" />

</androidx.constraintlayout.widget.ConstraintLayout>